Fix contrast of skip link with dark colour scheme

--- a/src/assets/styles/components/banner.css
+++ b/src/assets/styles/components/banner.css
@@ -14,6 +14,7 @@
 
 .banner__skip {
   background-color: var(--color-focus);
+  color: var(--color-text-focus);
   display: block;
   inset-block-start: 0;
   inset-inline-start: calc(var(--gap) - var(--inset-small));
