--- a/src/assets/styles/config/custom-properties.css
+++ b/src/assets/styles/config/custom-properties.css
@@ -18,6 +18,7 @@
   --color-rule: var(--color-neutral-lightest);
 
   --color-text: var(--color-neutral-darkest);
+  --color-text-focus: hsl(var(--tint) 16%); /* Ignore color-scheme */
   --color-link: var(--color-accent);
   --color-link-underline: var(--color-neutral-light);
 
